# Portafolio

./: .gitignore  README.md
CS562/CS562/: AppDelegate.h  AppDelegate.m  CDataInitializer.h  CDataInitializer.m  DirectionalLight.h  DirectionalLight.m  Engine.json  FirstPersonControls.h  FirstPersonControls.m  GBuffer.h  GBuffer.m  Image.h  (+84 more)
CS562/CS562.xcodeproj/: project.pbxproj
Go/: environment.sh  hello.go
Harmony/: CMakeLists.txt
Harmony/Core/: Component.h  Entity.h
Harmony/Core/Core.xcodeproj/: project.pbxproj
Harmony/Factory/Factory.xcodeproj/: project.pbxproj
Harmony/Harmony/: main.cpp
Harmony/Harmony.xcodeproj/: project.pbxproj
Harmony/Harmony.xcodeproj/project.xcworkspace/xcshareddata/: Harmony.xccheckout
Harmony/Harmony.xcodeproj/project.xcworkspace/xcuserdata/feliperobledo.xcuserdatad/: UserInterfaceState.xcuserstate
Harmony/Harmony.xcodeproj/xcuserdata/feliperobledo.xcuserdatad/xcschemes/: Harmony.xcscheme  xcschememanagement.plist
Harmony/Meta/: MetaClass.h  MetaProp.h
Harmony/Meta/Meta.xcodeproj/: project.pbxproj
Harmony/utils/: HarmonyString.h  SmrtPtr.h
Harmony/utils/utils.xcodeproj/: project.pbxproj
Javascript/: firstTest.js  index.html  stateChanges.js
Messaging/: DirectMessaging.cpp  main.cpp
Metadata/: Foo.cpp  Foo.h  Foo2.cpp  Foo2.h  Function.cpp  Function.h  Meta.h  MetaCasts.h  MetaIsDynamic.h  MetaLookUp.h  MetaMacros.h  MetaManager.h  MetaMember.cpp  MetaMember.h  Metadata.cpp  Metadata.h  Metamixin.h  Metasingleton.h  Primitive.h  Primitives.cpp  RefVariant.cpp  RefVariant.h  Variant.cpp  Variant.h  main.cpp
(+154 files in other folders)
